Changed the graph into a scatter plot with trend lines