@@ -17,6 +17,7 @@ configurations {
 dependencies {
     testImplementation 'junit:junit:4.13'
     implementation 'com.google.guava:guava:29.0-jre'
+    implementation 'thorwin:thorwin.math:1.5.0'
     checkstyleConfig("com.puppycrawl.tools:checkstyle:8.32") { transitive = false }
 }
 
@@ -44,4 +45,8 @@ checkstyle {
     config = resources.text.fromArchiveEntry(configurations.checkstyleConfig, 'google_checks.xml')
     ignoreFailures = false
     maxWarnings = 0
+}
+
+run {
+    jvmArgs = ["--add-exports=javafx.controls/com.sun.javafx.charts=ALL-UNNAMED"]
 }
